pgbouncer-exporter as sidecar

--- a/config.docker.yml
+++ b/config.docker.yml
@@ -10,7 +10,7 @@ pgbouncers:
     # The pgbouncer connection string. Supports environment variables replacement
     # Ie. $(PGBOUNCER_PASS) is replaced with the content of "PGBOUNCER_PASS" environment
     #     variable if exist, or left untouched if doesn't exist
-    dsn: $(PGBOUNCER_DB1)
+    dsn: $(PGBOUNCER_DB)
 
     # The pgbouncer connection timeout in seconds (defaults to 5 seconds)
     connect_timeout: 5
@@ -28,29 +28,4 @@ pgbouncers:
     # instance. Required if you have configured multiple pgbouncers,
     # in order to export an unique set of metrics.
     extra_labels:
-      pool_id: 1
-  - dsn: $(PGBOUNCER_DB2)
-    exclude_databases:
-      - pgbouncer
-    extra_labels:
-      pool_id: 2
-  - dsn: $(PGBOUNCER_DB3)
-    exclude_databases:
-      - pgbouncer
-    extra_labels:
-      pool_id: 3
-  - dsn: $(PGBOUNCER_DB4)
-    exclude_databases:
-      - pgbouncer
-    extra_labels:
-      pool_id: 4
-  - dsn: $(PGBOUNCER_DB5)
-    exclude_databases:
-      - pgbouncer
-    extra_labels:
-      pool_id: 5
-  - dsn: $(PGBOUNCER_DB6)
-    exclude_databases:
-      - pgbouncer
-    extra_labels:
-      pool_id: 6
+      pool_id: $(PGBOUNCER_POOL_ID)
